# cloud-storage-engine

./: .gitignore  CMakeLists.txt  README.md  metadata.db
.github/workflows/: cpp.yml
app/: main.cpp
cli_probe_runtime/logs/: delete_again.txt  get.txt  upload.txt
config/: Config.h
database/: Database.cpp  Database.h
include/: bloom_filter.hpp  chunk_index.hpp  chunk_store.hpp  chunker.hpp  types.hpp
layer2/: RecoveryManager.cpp  RecoveryManager.h
layer2/app/: main.cpp
layer2/database/: Database.cpp  Database.h
layer2/managers/: FileStructureBuilder.cpp  FileStructureBuilder.h  IndexManager.cpp  IndexManager.h  NamespaceManager.cpp  NamespaceManager.h  RecoveryManager.cpp  RecoveryManager.h
layer2/models/: Chunk.h  ChunkRecord.h  File.h  FileRecord.h  FileStatus.h  NamespaceNode.cpp  NamespaceNode.h
layer2/services/: DeleteService.cpp  DeleteService.h  DownloadService.cpp  DownloadService.h  UploadService.cpp  UploadService.h
layer2/utils/: Chunker.cpp  Chunker.h  Hash.cpp  Hash.h
managers/: FileStructureBuilder.cpp  FileStructureBuilder.h
models/: File.h  FileRecord.h  NamespaceNode.h
report/: XÂY DỰNG HỆ THỐNG LƯU TRỮ ĐÁM MÂY CÓ DEDUPLICATION.docx
report/layer_1/: layer_1_overall_structure_and_adjustment_code.md
report/layer_2/: LAYER2_TEST_RESULTS.md
services/: DeleteService.cpp  DeleteService.h  DownloadService.cpp  DownloadService.h  UploadService.cpp  UploadService.h
src/: bloom_filter.cpp  chunk_index.cpp  chunk_store.cpp  chunker.cpp  main.cpp
test_data/cloud_engine_dataset_v1/: README.md  file_index.json  manifest.json
test_data/cloud_engine_dataset_v1/01_exact_duplicates/set_b/: exact_payload_B_copy3.txt
test_data/cloud_engine_dataset_v1/02_near_duplicates_text/: notes_variant_01.md  notes_variant_02.md  notes_variant_03.md  notes_variant_04.md  notes_variant_05.md  notes_variant_06.md  notes_variant_07.md  notes_variant_08.md  notes_variant_09.md  notes_variant_10.md  text_base_v1.txt  text_insert_head_v2.txt  text_insert_middle_v3.txt  text_insert_tail_v4.txt  text_minor_edits_v6.txt  text_replace_sparse_v5.txt
test_data/cloud_engine_dataset_v1/04_edge_cases/: short_text_17_lines.txt
test_data/cloud_engine_dataset_v1/06_repetitive_logs/csv/: inventory_01.csv  inventory_02.csv  inventory_03.csv  inventory_04.csv  inventory_05.csv  inventory_06.csv  inventory_07.csv  inventory_08.csv  inventory_09.csv  inventory_10.csv
test_data/cloud_engine_dataset_v1/06_repetitive_logs/json/: chunk_catalog_01.json  chunk_catalog_02.json  chunk_catalog_03.json  chunk_catalog_04.json  chunk_catalog_05.json  chunk_catalog_06.json  chunk_catalog_07.json  chunk_catalog_08.json
test_data/cloud_engine_dataset_v1/07_nested_projects/project_01/docs/beta/: readme_01.md  readme_02.md  readme_03.md  readme_04.md
test_data/cloud_engine_dataset_v1/07_nested_projects/project_01/src/alpha/: module_01.py  module_02.py  module_03.py  module_04.py  module_05.py  module_06.py
test_data/cloud_engine_dataset_v1/07_nested_projects/project_01/tests/alpha/: test_case_01.json  test_case_02.json  test_case_03.json  test_case_04.json
test_data/cloud_engine_dataset_v1/07_nested_projects/project_02/docs/beta/: readme_01.md  readme_02.md  readme_03.md  readme_04.md
test_data/cloud_engine_dataset_v1/07_nested_projects/project_02/src/alpha/: module_01.py  module_02.py  module_03.py  module_04.py  module_05.py  module_06.py
test_data/cloud_engine_dataset_v1/08_gc_delete_scenarios/: README.md  scenario_gc_01.json  scenario_gc_02.json  scenario_gc_03.json  scenario_gc_04.json  scenario_gc_05.json  scenario_gc_06.json  scenario_gc_07.json  scenario_gc_08.json  scenario_gc_09.json  scenario_gc_10.json
test_data/cloud_engine_dataset_v1/09_recovery_checkpoints/manifests/: recovery_plan_01.json  recovery_plan_02.json  recovery_plan_03.json  recovery_plan_04.json  recovery_plan_05.json  recovery_plan_06.json
test_data/cloud_engine_dataset_v1/09_recovery_checkpoints/snapshots/: checkpoint_01.json  checkpoint_02.json  checkpoint_03.json  checkpoint_04.json  checkpoint_05.json  checkpoint_06.json
test_data/cloud_engine_dataset_v1/10_bloom_false_positive_cases/: case_01.json  case_02.json  case_03.json  case_04.json  case_05.json  case_06.json  case_07.json  case_08.json
test_data/layer2_test_dataset/layer2_dataset/: MANIFEST.json  README_DATASET.md
test_data/layer2_test_dataset/layer2_dataset/backup/daily/: dup_alpha_backup.txt  snapshot_01.txt  snapshot_02.txt  snapshot_03.txt  snapshot_04.txt
test_data/layer2_test_dataset/layer2_dataset/backup/weekly/: snapshot_01.txt  snapshot_02.txt  snapshot_03.txt
test_data/layer2_test_dataset/layer2_dataset/data/: large_text_01.txt
test_data/layer2_test_dataset/layer2_dataset/data/csv/: table_01.csv  table_02.csv  table_03.csv  table_04.csv  table_05.csv  table_06.csv  table_07.csv  table_08.csv  table_09.csv  table_10.csv
test_data/layer2_test_dataset/layer2_dataset/data/json/: data_01.json  data_02.json  data_03.json  data_04.json  data_05.json  data_06.json  data_07.json  data_08.json
test_data/layer2_test_dataset/layer2_dataset/src/module_a/: file_01.cpp  file_02.cpp  file_03.cpp  file_04.cpp  file_05.cpp  file_06.cpp  file_07.cpp
test_data/layer2_test_dataset/layer2_dataset/src/module_b/: file_01.cpp  file_02.cpp  file_03.cpp  file_04.cpp  file_05.cpp  file_06.cpp  file_07.cpp
test_data/layer2_test_dataset/layer2_dataset/src/module_c/: file_01.cpp  file_02.cpp  file_03.cpp  file_04.cpp  file_05.cpp  file_06.cpp  file_07.cpp
test_data/layer2_test_dataset/layer2_dataset/unicode/tài_liệu/: mô_tả.txt
test_data/layer2_test_dataset/layer2_dataset/unicode/ảnh/: ghi_chú.txt
test_data/layer2_test_dataset/layer2_dataset/users/alice/: profile.txt  todo.txt
test_data/layer2_test_dataset/layer2_dataset/users/bob/: notes.txt  profile.txt
test_data/sub/: c.txt
tests/: cli_probe.cpp  layer1_deep_runner.cpp  test_layer2.cpp  test_smoke.cpp
tests/cli_probe_runtime/input/: sample.txt
tests/cli_probe_runtime/logs/: get.txt
utils/: Chunker.cpp  Hash.cpp  Hash.h
(+119 files in other folders)
